placeholder setting done

--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -249,42 +249,41 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">No. Of Cases Appraised</mat-label>
-                                        <input matInput appNumberOnly placeholder="No Of Cases Appraised"
+                                        <input matInput appNumberOnly placeholder="No. Of Cases Appraised"
                                                formControlName="DisbNoOfCasesAppraised" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
-                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 240px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">No. of cases in which original revenue record
-                                            verified
+                                        <mat-label class="customMatLabel">No. Of Cases In Which Record Verified
                                         </mat-label>
-                                        <input matInput appNumberOnly placeholder="No Of Record Verified"
+                                        <input matInput appNumberOnly placeholder="No. Of Cases In Which Record Verified"
                                                formControlName="DisbNoOfRecordVerified" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
-                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 240px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">No. of cases sanctioned if authorized
+                                        <mat-label class="customMatLabel">No. of Cases Sanctioned If Authorized
                                         </mat-label>
-                                        <input matInput appNumberOnly placeholder="No Of Sanctioned Authorized"
+                                        <input matInput appNumberOnly placeholder="No. Of Cases Sanctioned If Authorized"
                                                formControlName="DisbNoOfSanctionedAuthorized" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">No. of sanction letters delivered</mat-label>
-                                        <input matInput appNumberOnly placeholder="Sanction Letter Delivered"
+                                        <mat-label class="customMatLabel">No. Of Sanction Letters Delivered</mat-label>
+                                        <input matInput appNumberOnly placeholder="No. Of Sanction Letter Delivered"
                                                formControlName="DisbSanctionLetterDelivered" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">No. of supply orders delivered</mat-label>
-                                        <input matInput appNumberOnly placeholder="Supply Order Delivered"
+                                        <mat-label class="customMatLabel">No. Of Supply Orders Delivered</mat-label>
+                                        <input matInput appNumberOnly placeholder="No. Of Supply Order Delivered"
                                                formControlName="DisbSupplyOrderDelivered" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
@@ -320,17 +319,17 @@
 
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">No. of utilizations checked</mat-label>
-                                        <input matInput appNumberOnly placeholder="No. Of Cases Received"
+                                        <mat-label class="customMatLabel">No. of Utilizations Checked</mat-label>
+                                        <input matInput appNumberOnly placeholder="No. of Utilizations Checked"
                                                formControlName="NoOfUtilizationChecked" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
-                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 235px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">No. of sanctioned mutations verified
+                                        <mat-label class="customMatLabel">No. Of Sanctioned Mutations Verified
                                         </mat-label>
-                                        <input matInput appNumberOnly placeholder="No Of Sanctn Mutation Verified"
+                                        <input matInput appNumberOnly placeholder="No. Of Sanctioned Mutations Verified"
                                                formControlName="NoOfSanctnMutationVerified" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
@@ -364,16 +363,16 @@
 
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">No. of demand notices delivered</mat-label>
-                                        <input matInput appNumberOnly placeholder="No. Of Cases Received"
+                                        <mat-label class="customMatLabel">No. Of Demand Notices Delivered</mat-label>
+                                        <input matInput appNumberOnly placeholder="No. Of Demand Notices Delivered"
                                                formControlName="RecNoOfNoticeDelivered" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">No. of legal notices delivered</mat-label>
-                                        <input matInput appNumberOnly placeholder="DisbNoOfCasesAppraised"
+                                        <mat-label class="customMatLabel">No. Of Legal Notices Delivered</mat-label>
+                                        <input matInput appNumberOnly placeholder="No. Of Legal Notices Delivered"
                                                formControlName="RecNoOfLegalNoticeDelivered" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
@@ -381,15 +380,15 @@
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                         <mat-label class="customMatLabel">Amount recovered (Daily)</mat-label>
-                                        <input matInput appNumberOnly placeholder="RecNoOfDefaulterContacted"
+                                        <input matInput appNumberOnly placeholder="Amount recovered (Daily)"
                                                formControlName="RecNoOfDefaulterContacted" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">No. of defauters contacted</mat-label>
-                                        <input matInput appNumberOnly placeholder="DisbNoOfCasesAppraised"
+                                        <mat-label class="customMatLabel">No. Of Defauters Contacted</mat-label>
+                                        <input matInput appNumberOnly placeholder="No. Of Defauters Contacted"
                                                formControlName="RecNoOfDefaulterContacted" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
@@ -431,16 +430,16 @@
                                 <!--                                </div>-->
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">Progressive farmers contacted</mat-label>
-                                        <input matInput appNumberOnly placeholder="TOTFarmersContacted"
+                                        <mat-label class="customMatLabel">Progressive Farmers Contacted</mat-label>
+                                        <input matInput appNumberOnly placeholder="Progressive Farmers Contacted"
                                                formControlName="TOTFarmersContacted" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
                                 </div>
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">No. of farms visited</mat-label>
-                                        <input matInput appNumberOnly placeholder="TOTNoOfFarmersVisisted"
+                                        <mat-label class="customMatLabel">No. Of Farms Visited</mat-label>
+                                        <input matInput appNumberOnly placeholder="No. Of Farms Visited"
                                                formControlName="TOTNoOfFarmersVisisted" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
@@ -472,8 +471,8 @@
                             <div class="flex" style="flex-wrap: wrap;">
                                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                        <mat-label class="customMatLabel">Any other work done</mat-label>
-                                        <input matInput placeholder="AnyOtherWorkDone"
+                                        <mat-label class="customMatLabel">Any Other Work Done</mat-label>
+                                        <input matInput placeholder="Any Other Work Done"
                                                formControlName="AnyOtherWorkDone" maxlength="30"
                                                autocomplete="off"/>
                                     </mat-form-field>
