--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -216,14 +216,14 @@
                                 <div class="flex" style="flex-wrap: wrap;">
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">General Administration<strong class="matMandatory">*</strong></mat-label>
+                                            <mat-label class="customMatLabel">General Administration</mat-label>
                                             <input matInput placeholder="General Administration" formControlName="GeneralAdmissionComplaints" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Cash Management <strong class="matMandatory">*</strong></mat-label>
+                                            <mat-label class="customMatLabel">Cash Management</mat-label>
                                             <input matInput placeholder="Cash Management" formControlName="CashManagementCompliance" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -238,21 +238,21 @@
                                 <div class="flex" style="flex-wrap: wrap;">
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Audit Reports<strong class="matMandatory">*</strong></mat-label>
+                                            <mat-label class="customMatLabel">Audit Reports</mat-label>
                                             <input matInput placeholder="Audit Reports" formControlName="AuditReports" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Outstanding Paras <strong class="matMandatory">*</strong></mat-label>
+                                            <mat-label class="customMatLabel">Outstanding Paras</mat-label>
                                             <input matInput placeholder="Outstanding Paras" formControlName="OutstandingParas" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Settlement <strong class="matMandatory">*</strong></mat-label>
+                                            <mat-label class="customMatLabel">Settlement</mat-label>
                                             <input matInput placeholder="Settlement" formControlName="Settlements" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -264,8 +264,8 @@
                                 <div class="flex" style="flex-wrap: wrap;">
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of loan cases in which Recovery Schedule</mat-label>
-                                            <input matInput placeholder="No. of loan cases in which Recovery Schedule" appNumberOnly formControlName="LCNotIssuedToBorrowers" autocomplete="off"/>
+                                            <mat-label class="customMatLabel">Loan Cases Not Issued to Borrowers</mat-label>
+                                            <input matInput placeholder="Loan Cases Not Issued to Borrowers" appNumberOnly formControlName="LCNotIssuedToBorrowers" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -278,14 +278,14 @@
                                 <div class="flex" style="flex-wrap: wrap;">
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Progressive Farmers Contacted<strong class="matMandatory">*</strong></mat-label>
+                                            <mat-label class="customMatLabel">Progressive Farmers Contacted</mat-label>
                                             <input matInput placeholder="rogressive Farmers Contacted" appNumberOnly formControlName="TOTFarmersContacted" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of Farms Visited<strong class="matMandatory">*</strong></mat-label>
+                                            <mat-label class="customMatLabel">No. of Farms Visited</mat-label>
                                             <input matInput placeholder="No. of Farms Visited" appNumberOnly formControlName="TOTNoOfFarmersVisisted" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -297,8 +297,8 @@
                                 <div class="flex" style="flex-wrap: wrap;">
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Any other work done<strong class="matMandatory">*</strong></mat-label>
-                                            <input matInput placeholder="Any other work done" formControlName="AnyOtherWorkDone" autocomplete="off"/>
+                                            <mat-label class="customMatLabel">Any Other Work Done</mat-label>
+                                            <input matInput placeholder="Any Other Work Done" formControlName="AnyOtherWorkDone" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
 
