--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -139,31 +139,31 @@
 
                             <div class="col-lg-12">
                                 <div class="flex" style="flex-wrap: wrap;">
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 240px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of loan cases in which Recovery Schedule/Revised Recovery Schedules have not been issued to borrowers</mat-label>
-                                            <input matInput placeholder="No. of loan cases in which Recovery Schedule/Revised Recovery Schedules have not been issued to borrowers" appNumberOnly formControlName="LCNotIssuedToBorrowers" autocomplete="off"/>
+                                            <mat-label class="customMatLabel">Loan Cases Not Issued to Borrowers</mat-label>
+                                            <input matInput placeholder="Loan Cases Not issued To Borrowers" appNumberOnly formControlName="LCNotIssuedToBorrowers" autocomplete="off"/>
+                                        </mat-form-field>
+                                    </div>
+
+                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 245px;">
+                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                            <mat-label class="customMatLabel">Tour Diaries Are As Per Approved Tour Plan</mat-label>
+                                            <input matInput placeholder="Tour Diaries As Per Approved Tour Plan" formControlName="McoNBmTourDiaryAPPlan" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Whether checked that MCOs and Branch Manager’s tour diaries are as per approved Tour Plan</mat-label>
-                                            <input matInput placeholder="Whether checked that MCOs and Branch Manager’s tour diaries are as per approved Tour Plan" formControlName="McoNBmTourDiaryAPPlan" autocomplete="off"/>
+                                            <mat-label class="customMatLabel">Any short comings in Tour Diaries</mat-label>
+                                            <input matInput placeholder="Any short comings in Tour Diaries" formControlName="AnyShortComingInDiaries" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Any short comings in Tour Diaries of MCOs/Branch Manager</mat-label>
-                                            <input matInput placeholder="Any short comings in Tour Diaries of MCOs/Branch Manager" formControlName="AnyShortComingInDiaries" autocomplete="off"/>
-                                        </mat-form-field>
-                                    </div>
-
-                                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of Defaulters contacted by the Z.M (Rec. & SAM)</mat-label>
-                                            <input matInput placeholder="No. of Defaulters contacted by the Z.M (Rec. & SAM)" appNumberOnly formControlName="RecNoOfDefaulterContacted" autocomplete="off"/>
+                                            <mat-label class="customMatLabel">No. of Defaulters Contacted</mat-label>
+                                            <input matInput placeholder="No. of Defaulters Contacted" appNumberOnly formControlName="RecNoOfDefaulterContacted" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
 
