--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -134,19 +134,18 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of new borrowers contacted</mat-label>
-                                            <input appNumberOnly matInput formControlName="DisbNoOfNewBorrowerContacted" placeholder="No. of new borrowers contacted"
+                                            <mat-label class="customMatLabel">No. of New Borrowers Contacted</mat-label>
+                                            <input appNumberOnly matInput formControlName="DisbNoOfNewBorrowerContacted" placeholder="No. of New Borrowers Contacted"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
 
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
-                                         style="width: 225px;">
+                                         style="width: 240px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of borrowers of Roll-over cases
-                                                contacted
+                                            <mat-label class="customMatLabel">No. Of Borrowers Of Roll-Over Cases
                                             </mat-label>
-                                            <input appNumberOnly matInput formControlName="DisbBorrowerRollOverCasesContacted" placeholder="No. of borrowers of Roll-over cases"
+                                            <input appNumberOnly matInput formControlName="DisbBorrowerRollOverCasesContacted" placeholder="No. Of Borrowers Of Roll-Over Cases"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -162,8 +161,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of Defaulters contacted</mat-label>
-                                            <input appNumberOnly matInput formControlName="RecNoOfDefaulterContacted" placeholder="No. of Defaulters contacted"
+                                            <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
+                                            <input appNumberOnly matInput formControlName="RecNoOfDefaulterContacted" placeholder="No. Of Defaulters Contacted"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -171,8 +170,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Amount recovered with L.C. No.</mat-label>
-                                            <input appNumberOnly matInput formControlName="RecAmountRecoveredWithLCNo" placeholder="Amount recovered with L.C. No."
+                                            <mat-label class="customMatLabel">Amount Recovered With L.C. No.</mat-label>
+                                            <input appNumberOnly matInput formControlName="RecAmountRecoveredWithLCNo" placeholder="Amount Recovered With L.C. No."
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -185,9 +184,9 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of Utilizations checked as per quota
+                                            <mat-label class="customMatLabel">No. Of Utilizations Checked
                                             </mat-label>
-                                            <input appNumberOnly matInput formControlName="NoOfUtilizationChecked" placeholder="No. of Utilizations checked as per quota"
+                                            <input appNumberOnly matInput formControlName="NoOfUtilizationChecked" placeholder="No. Of Utilizations Checked"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -203,8 +202,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Progressive Farmers contacted</mat-label>
-                                            <input appNumberOnly matInput formControlName="TOTFarmersContacted" placeholder="Progressive Farmers contacted"
+                                            <mat-label class="customMatLabel">Progressive Farmers Contacted</mat-label>
+                                            <input appNumberOnly matInput formControlName="TOTFarmersContacted" placeholder="Progressive Farmers Contacted"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -212,8 +211,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of farms visited</mat-label>
-                                            <input appNumberOnly matInput formControlName="TOTNoOfFarmersVisisted" placeholder="No. of farms visited"
+                                            <mat-label class="customMatLabel">No. Of Farms Visited</mat-label>
+                                            <input appNumberOnly matInput formControlName="TOTNoOfFarmersVisisted" placeholder="No. Of Farms Visited"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -226,8 +225,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Any other work done</mat-label>
-                                            <input  matInput formControlName="AnyOtherWorkDone" autocomplete="off" placeholder="Any other work done"/>
+                                            <mat-label class="customMatLabel">Any Other Work Done</mat-label>
+                                            <input  matInput formControlName="AnyOtherWorkDone" autocomplete="off" placeholder="Any Other Work Done"/>
                                         </mat-form-field>
                                     </div>
 
