--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -145,8 +145,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of defaulters contacted</mat-label>
-                                            <input appNumberOnly matInput formControlName="NoOfDefaulterContacted" placeholder="No. of defaulters contacted"
+                                            <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
+                                            <input appNumberOnly matInput formControlName="NoOfDefaulterContacted" placeholder="No. Of Defaulters Contacted"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -154,8 +154,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Results of contacts so made</mat-label>
-                                            <input appNumberOnly matInput formControlName="ResultContactMade" placeholder="Results of contacts so made"
+                                            <mat-label class="customMatLabel">Results Of Contacts So Made</mat-label>
+                                            <input appNumberOnly matInput formControlName="ResultContactMade" placeholder="Results Of Contacts So Made"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -163,8 +163,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Measure Boost Up Record</mat-label>
-                                            <input appNumberOnly matInput formControlName="MeasureBoostUpRecord" placeholder="Measure Boost Up Record"
+                                            <mat-label class="customMatLabel">Measure Boosting Up Record</mat-label>
+                                            <input appNumberOnly matInput formControlName="MeasureBoostUpRecord" placeholder="Measure Boosting Up Record"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
