--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -158,8 +158,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">No. of defaulters contacted</mat-label>
-                                            <input appNumberOnly matInput formControlName="NoOfDefaulterContacted"
+                                            <mat-label class="customMatLabel">No. Of Defaulters Contacted</mat-label>
+                                            <input appNumberOnly matInput placeholder="No. Of Defaulters Contacted" formControlName="NoOfDefaulterContacted"
                                                    autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -167,8 +167,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Results of contacts so made</mat-label>
-                                            <input appNumberOnly placeholder="Results of contacts so made" matInput
+                                            <mat-label class="customMatLabel">Results Of Contacts So Made</mat-label>
+                                            <input appNumberOnly placeholder="Results Of Contacts So Made" matInput
                                                    formControlName="ResultContactMade" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
@@ -176,8 +176,8 @@
                                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2"
                                          style="width: 225px;">
                                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                            <mat-label class="customMatLabel">Measure Boost Up Record</mat-label>
-                                            <input appNumberOnly matInput placeholder="Measure Boost Up Record"
+                                            <mat-label class="customMatLabel">Measure Boosting Up Record</mat-label>
+                                            <input appNumberOnly matInput placeholder="Measure Boosting Up Record"
                                                    formControlName="MeasureBoostUpRecord" autocomplete="off"/>
                                         </mat-form-field>
                                     </div>
