Tour Diary Bug Fix

--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -144,7 +144,7 @@
                                             <mat-label class="customMatLabel">Arrival Time</mat-label>
                                             <input type="text" matInput [ngxTimepicker]="timepickerArrival"
                                                    [format]="DateFormat()" readonly
-                                                   formControlName="DepartureFromTime"/>
+                                                   formControlName="ArrivalAtTime"/>
                                             <mat-icon matSuffix (click)="openFromIcon(timepickerArrival)">schedule
                                             </mat-icon>
                                         </mat-form-field>
