--- a/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
+++ b/src/app/modules/khaad-seed-vendor/vendor-list/vendor-list.component.html
@@ -90,7 +90,7 @@
                                     matInput
                                     placeholder="Vendor Phone Number"
                                     formControlName="PhoneNumber"
-                                    maxlength="30"
+                                    maxlength="11" minlength="11"
                                     autocomplete="off"
                                     appNumberOnly
                                 />
